# monte-carlo-tree-search

./: CHANGELOG.md  Cargo.toml  Readme.md
.github/workflows/: release-plz.yml
src/: bias.rs  count.rs  evaluation.rs  explorer.rs  lib.rs  player.rs  policy.rs  search.rs  simulation.rs  tree.rs  two_player_game.rs
src/evaluation/: count.rs  count_or_decided.rs  count_wdl.rs  count_wdl_solved.rs  ucb.rs  ucb_solver.rs
src/explorer/: bayesian.rs  ucb.rs
tests/: connect-four.rs  integration.rs  tic-tac-toe.rs
