[package]
name = "monte-carlo-tree-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Monte Carlo Tree Search to find good moves in two player games."
repository = "https://github.com/pacman82/monte-carlo-tree-search"

[dependencies]
rand = "0.9.0"

[dev-dependencies]
connect-four-solver = "0.2.3"
tic-tac-toe-board = "0.2.2"
